--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <title>pokedex</title>
   </head>
   <body>
-    <header class="headline">
-      <figure></figure>
+    <header class="header">
+      <figure >
+        <svg xmlns="http://www.w3.org/2000/svg" id="pokeball" viewBox="0 0 649.18 651.56"><defs><style>.cls-3{fill:#fff}</style></defs><path d="M1007.12 545.21a354.12 354.12 0 0 1 24.34 56.25A323.39 323.39 0 0 1 1013 849.3c-53.62 106.54-168.42 179.59-288 180.51-120.14.92-231.84-69.38-288.12-174.54a323.79 323.79 0 0 1-34.53-104.18c-6.28-40.65-4.19-80.93 4.62-121 3.8-17.24 8.5-34.42 15.56-50.41 26.4-59.82 65.32-109.68 120.41-146.2C625.15 379 731 362.94 825.07 393.81c78.21 25.67 140.58 81.19 182.05 151.4Z" style="fill:#010101" transform="translate(-398.71 -378.26)"/><path d="M737.49 407.42c83.09 2.49 162.41 40.58 221.86 117.92 36.44 47.41 55.5 101.4 59.31 161 .46 7.13-1.91 11.53-7.28 15.33-21.69 15.35-45.07 27.54-69.52 37.86A545.67 545.67 0 0 1 835 772.1c-7.42 1.46-14.9 2.59-22.33 3.95-4.32.8-6.49-.21-8.18-5-15-42.69-52.41-65.47-95.23-57-31.54 6.26-52.37 25.95-62.55 56.34-2 5.84-3.72 7.54-10.19 6.66A528.74 528.74 0 0 1 515.31 746c-29.55-11.51-57.77-25.67-83.77-44-3.23-2.29-3.94-4.74-3.83-8.29a295.24 295.24 0 0 1 150.71-248.39c45-25.32 93.43-37.84 159.07-37.9Z" style="fill:#ed1e25" transform="translate(-398.71 -378.26)"/><path d="M606.44 394.61C574 525.92 454.1 631.54 301.98 621.1 151.36 610.74 57.29 492.39 39.36 395.33c12.44 5.84 24.66 11.85 37.1 17.36 48 21.24 98.1 34.87 150 42.35a35.35 35.35 0 0 0 4.21.53c15.89.44 27.15 7.09 38.78 19.09 36.65 37.84 96.61 30.65 126-13.1a9.74 9.74 0 0 1 7.5-4.52 603.9 603.9 0 0 0 153.73-39.54c12.89-5.19 25.37-11.4 38-17.18 3.61-1.66 7.16-3.47 11.76-5.71Z" class="cls-3"/><path d="M326.5 362.74c29.68-.09 54.31 24.24 54.34 53.7s-24.54 54-54.17 53.89a53.4 53.4 0 0 1-53.61-53.38c-.12-30.21 23.44-54.12 53.44-54.21Z" class="cls-3"/></svg></figure>
       <div class="search-bar">
         <input name="search-bar" class="search-bar__input" type="text" placeholder="...Search Pokemon" data-search-input>
-        <button class="search-bar__btn"></button>
+        <button class="search-bar__submit"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+        <path d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z"></path>
+        </svg></button>
 
       </div>
     </header>
+    <main>test</main>
+    <footer><small>&copy; 2026 Andre Funk</small></footer>
     <section class="content"></section>
   </body>
   <script type="module" src="/src/main.ts"></script>
