added PokemonList and LoadMore Btn

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 
       </div>
     </header>
-    <main>test</main>
+
+  
+    <main class="content">
+      <section class="pokemon-list" data-pokemon-list></section>
+      <button class="load-more-btn" data-load-more>Load More...</button>
+    </main>
+
     <footer><small>&copy; 2026 Andre Funk</small></footer>
-    <section class="content"></section>
   </body>
   <script type="module" src="/src/main.ts"></script>
 </html>
