--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
     <main class="content">
       <section class="pokemon-list" data-pokemon-list></section>
-      <button class="load-more-btn" data-load-more>Load More...</button>
+      <button class="load-more-btn" data-load-more>Load More</button>
     </main>
     
     <footer>
