feat: flavor text and evo chain logic added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
       <button class="load-more-btn" data-load-more>Load More</button>
     </main>
     
+    <section id="dialog">
+      
+    </section>
+
+
+
+
+
+
+
     <aside class="pokemon-overlay d-none" data-overlay>
       <div class="pokemon-wrapper">
         <div class="pokemon" data-pokemon-details>
